tests/fixtures/errors/E0907_bundle_type_mismatch.mimz
// expect: E0907
bundle A { valid: bit, data: bits[4] }
bundle B { valid: bit, data: bits[8] }
module Top {
  in x: A
  out y: B
  y = x
}
